# Meta-Hackathon-Final

./: README.md
FinalProject/: Blog.md  Dockerfile  app.py  openenv.yaml  pyproject.toml  requirements.txt
FinalProject/artifacts/: pitch_report.json
FinalProject/artifacts/adaptive_environment/baseline/: simulation_metrics.json
FinalProject/artifacts/adaptive_environment/colab_rerun/baseline/: simulation_metrics.json
FinalProject/artifacts/adaptive_environment/colab_rerun/learning_curve/: learning_curve.json
FinalProject/artifacts/adaptive_environment/colab_rerun/multi_agent/: simulation_metrics.json
FinalProject/artifacts/adaptive_environment/learning_curve/: learning_curve.json
FinalProject/artifacts/adaptive_environment/multi_agent/: simulation_metrics.json
FinalProject/artifacts/training/: TRAINING_EVIDENCE.md  model_output_sample_raw.json  transition_buffer.json  transition_buffer_colab.json
FinalProject/docs/: ARCHITECTURE.md  BENCHMARK_TEMPLATE.md  ENVIRONMENT_SPEC.md  HF_MINI_BLOG.md  REPORT_OUTLINE.md
FinalProject/scripts/: build_report.py  convert_svg_to_png_hack.py  create_demo_video.py  create_screen_demo_video.py  demo_episode.py  minimal_trl_train.py  rl_training_stub.py  run_adaptive_environment.py
FinalProject/src/inboxworld/: __init__.py  agents.py  environment.py  evaluation.py  llm_inference.py  policies.py  reward_calculator.py  scenarios.py  simulator.py  training.py  types.py
